added header and latest news section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Boolean News</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h1><i>The Boolean News</i></h1>
+    </div>
+    <hr />
+    <div class="latest-news">
+      <h2>Latest News!</h2>
+      <p><b>A new cohort just started</b></p>
+      <p>Ready to tackle the challange, new group of Booleans charging on!</p>
+    </div>
+    <hr />
+  </body>
 </html>
