added long read section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,47 @@
     </div>
     <hr />
     <div class="latest-news">
-      <h2>Latest News!</h2>
-      <p><b>A new cohort just started</b></p>
+      <h2>Latest News</h2>
+      <p><b>A new cohort just started!</b></p>
       <p>Ready to tackle the challange, new group of Booleans charging on!</p>
     </div>
     <hr />
+    <div class="long-read-section">
+      <h2>Long Read</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe soluta,
+        voluptatem iure laboriosam excepturi iste ab tempora sed quidem
+        quibusdam autem asperiores, nihil eaque labore odio aliquam? Iure, quod
+        earum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eos
+        facilis nihil blanditiis aliquam error iusto aperiam placeat autem
+        excepturi recusandae, asperiores dicta nesciunt culpa, quam nam officiis
+        eligendi impedit.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla cumque
+        illum, doloribus praesentium blanditiis aut optio dignissimos veritatis
+        fugit et sunt cupiditate maiores reiciendis maxime dolorum perferendis
+        eius quae neque!
+      </p>
+      <h2>Coming next</h2>
+      <ol>
+        <li>Where'r learning about CSS</li>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+            >Learn more about CSS here</a
+          >
+        </li>
+        <li>
+          <ul>
+            <li>Learn about lists</li>
+            <li>Get lists done</li>
+            <li>Wonder why we need lists</li>
+          </ul>
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
