--- a/index.html
+++ b/index.html
@@ -55,5 +55,17 @@
         </li>
       </ol>
     </div>
+    <div id="images">
+      <img
+        class="pictures"
+        src="https://images.pexels.com/photos/4974920/pexels-photo-4974920.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        alt="Two guys working with a computer"
+      />
+      <img
+        class="pictures"
+        src="https://images.pexels.com/photos/1181263/pexels-photo-1181263.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        alt="Two women working on a computer"
+      />
+    </div>
   </body>
 </html>
