--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <hr />
     <div class="latest-news">
       <h2>Latest News</h2>
+      <img
+        class="pictures"
+        src="https://images.pexels.com/photos/2061168/pexels-photo-2061168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        alt="picture of code"
+      />
       <p><b>A new cohort just started!</b></p>
       <p>Ready to tackle the challange, new group of Booleans charging on!</p>
     </div>
